2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/kernel.cdl: Update doc links.
	* cdl/synch.cdl: Ditto.
	* cdl/thread.cdl: Ditto.

2003-02-10  Gary Thomas  <gary@mlbassoc.com>

	* include/thread.inl: Add more debug info to thread stack checking.

	* tests/clocktruth.cxx: 
	* tests/clockcnv.cxx: Use <cyg/infra/diag.h> for diag_printf()
	prototype, rather than hard coding (because it was inconsistent).

2003-02-05  Gary Thomas  <gary@mlbassoc.com>

	* tests/kcache2.c (test_dcache_operation): New test to verify
	that the DATA cache syncs properly.

2003-01-31  Nick Garnett  <nickg@calivar.com>

	* cdl/kernel.cdl: 
	* tests/fptest.c: Added this program to test interaction of FPU
	with multiple threads.

2003-01-30  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/common/thread.cxx: Fix potential warning and overflow with
	CYGNUM_KERNEL_THREADS_DATA_MAX == 32.

2003-01-28  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/common/kapi.cxx (cyg_thread_get_next): Be quite zealous about
	checking the validity of passed in threads in debug mode.
	(cyg_thread_get_info): Ditto.

	* cdl/thread.cdl: Correct max legal value for
	CYGNUM_KERNEL_THREADS_DATA_MAX.

2003-01-22  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/kernel.sgml: Document cyg_thread_info type.

2003-01-13  Dmitriy Korovkin  <dkorovkin@rambler.ru>
2003-01-13  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/mqueue.hxx: Allow get/put to return time out.
	* include mqueue.inl: Ditto.

2003-01-02  Gary Thomas  <gary@mlbassoc.com>

	* tests/kcache2.c: New subtest for raw data cache operations.

2002-12-12  Nick Garnett  <nickg@ecoscentric.com>

	* src/common/kapi.cxx: 
	* include/kapi.h:
	Added function cyg_thread_get_next(), cyg_thread_find() and
	cyg_thread_get_info() to allow the current set of threads to be
	enumerated, and per-thread information to be retrieved safely.

	* doc/kernel.sgml: Documented new KAPI calls.

	* src/common/thread.cxx: Zero unique_id in thread destructor so